# yt-seo-tool

./: .env.example  .gitignore  CHANGELOG_multi_channel.md  README.md  UI_ENHANCEMENTS.md  pyproject.toml
app/: main.py  shared.py
app/pages/: 01_Dashboard.py  02_Video_List.py  03_Video_Detail.py  04_Settings.py  05_Actions.py
cli/: __init__.py  main.py
config/: settings.example.toml
docs/: README_skeleton.md  SECURITY.md  code_templates.md  multi_channel_setup.md  repo_scaffold.md  task.md  video_processing_strategy.md  windsurf_prompt.md
migrations/: 0001_init.sql  0002_add_channel_handle.sql
tests/: test_smoke.py
ytseo/: __init__.py  ai_ewg_bridge.py  config.py  db.py  llm_client.py  models.py  seo_engine.py  workflows.py  youtube_analytics.py  youtube_api.py  yts_downloader.py
